--- a/main.css
+++ b/main.css
@@ -84,13 +84,14 @@ body {
     padding: 10px; /* Dostosuj padding */
 }
 
- content {
+ /* content {
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
     background: #f1f4fd;
-  }
+  } */
+
 .container {
     width: 97%;
   }
@@ -183,6 +184,68 @@ body {
     top: -10px;
     bottom: -10px;
   }
+
+
+  
+html{
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  stop-opacity: 7rem;
+}
+
+section{
+  margin:0 auto;
+  max-width: 1200px;
+  padding:2rem;
+}
+  a {
+    text-decoration: none;
+  }
+  .btn{
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 1rem 3rem;
+    font-size: 2rem;
+    cursor: pointer;
+    text-transform: capitalize;
+    transition: .2s linear;
+    background-color: #fdf4ea;
+    color:#53747d;
+  }
+  .home .slide {
+    display: flex;
+   align-items: center;
+   flex-wrap: wrap-reverse;
+   gap:2rem;
+   margin-bottom: 4rem;
+    
+  }
+  
+  .home .swiper-slide .content{
+    flex: 1 1 40rem;
+    text-align: center;
+  }
+  .home .swiper-slide .image{
+    flex: 1 1 40rem;
+  }
+  .home .swiper-slide .image img{
+    width: 100%;
+
+  }
+  .home .swiper-slide .content .span {
+    font-size: 2.5rem;
+    color:var(--light-color);
+  }
+  .home .swiper-slide .content .h3{
+    margin:1rem 0;
+   font-size: 8rem;
+   color:var(--black);
+   text-transform: capitalize;
+  }
+  .swiper-pagination-bullet-active {
+    background-color: #fff;
+  }
   /* Styles for mobile and tablets */
   @media only screen and (max-width: 1023px) {
     .slider-wrapper .slide-button {
@@ -199,6 +262,17 @@ body {
     }
     .slider-scrollbar .scrollbar-thumb {
       width: 20%;
+    }
+  }
+
+  @media (max-width:991px){
+    .home .slide .content .h3{
+      font-size: 4rem;
+    }
+  }
+  @media (max-width:768px){
+    .home .slide .content .h3{
+      font-size: 3rem;
     }
   }
 
